memorize fixes, page-wrap in read mode fix styles

--- a/src/app/pages/read/read.page.scss
+++ b/src/app/pages/read/read.page.scss
@@ -23,14 +23,21 @@ ion-content {
 .ur table {
   margin: 0 auto;
 }
-.content-wrapper {
-  max-width: 360px; //324px;
-  height: 576px;
-  padding: 11px;
-  margin: 0 auto;
-  border: 2px solid;
-  user-select: text;
-  // background-image: url("../../../assets/quran-pg466-aspect.PNG");
+.page-wrapper {
+  .page-top-info {
+    display: flex;
+    justify-content: center;
+    margin-bottom: -5px;
+  }
+  .content-wrapper {
+    max-width: 324px; //360px;
+    height: 576px;
+    padding: 5px;
+    margin: 0 auto;
+    border: 2px solid;
+    user-select: text;
+    // background-image: url("../../../assets/quran-pg466-aspect.PNG");
+  }
 }
 .rtl {
   direction: rtl;
@@ -48,11 +55,11 @@ ion-content {
 .small-text {
   font-size: small;
 }
-.ar div {
+.ar .line {
   border-bottom: 0.5px solid #cecece;
-  height: 36px; //screen:height in px=> 345:32,300:28,250:22
+  height: 38px; //screen:height in px=> 345:32,300:28,250:22
 }
-.ar div:hover {
+.ar .line:hover {
   background-color: var(--success-light); //#ebfef6; // #ebf2fe;
 }
 .ur {
@@ -118,7 +125,7 @@ ion-footer {
   align-items: center;
   font-size: 9px;
   position: absolute;
-  left: -22px;
+  left: -15px;
   // top: -10px;
   line-height: 8px;
 }
@@ -147,9 +154,20 @@ ion-footer {
     font-size: xx-small;
   }
 }
+.quran-kareem-text {
+  font-size: 40px;
+  border: none !important;
+  top: 50%;
+  transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+}
 .surah-start-line {
   text-align-last: center;
   font-size: small;
+  color: var(--ion-color-medium-tint);
 }
 .surah-end-line {
   text-align-last: center;
